# ED2_PARTE3_FINAL

./: ArvHuffman.cpp  ArvHuffman.h  CMakeLists.txt  LZ77.cpp  LZ77.h  LZ78.cpp  LZ78.h  LZW.cpp  LZW.h  No.cpp  No.h  NoHuffman.cpp  NoHuffman.h  README.md  controlaArquivo.cpp  controlaArquivo.h  main.cpp  question.cpp  question.h
