cmake_minimum_required(VERSION 3.10)
project(ED2_PARTE3_FINAL)

set(CMAKE_CXX_STANDARD 11)

add_executable(ED2_PARTE3_FINAL main.cpp LZ77.cpp LZ77.h LZW.cpp LZW.h LZ78.cpp LZ78.h ArvHuffman.cpp ArvHuffman.h NoHuffman.cpp NoHuffman.h No.cpp No.h question.cpp question.h controlaArquivo.cpp controlaArquivo.h)